# TQ_GenAI_Chat

./: .cache_ggshield  .env.example  .env.prod  .gitignore  .keep_dirs.sh  .pre-commit-config.yaml  .secrets.baseline  AUDIO_SETTINGS_IMPROVEMENTS.md  AUDIO_SLIDERS_ENHANCEMENTS.md  CHANGELOG.md  COMPREHENSIVE_REFACTOR_COMPLETE.md  COMPREHENSIVE_REFACTOR_PLAN.md  CRUSH.md  DOCUMENTATION.md  DONE.md  Dockerfile.prod  ERROR_RESOLUTION_SUMMARY.md  FACT_CHECK_UPDATE.md  FEATURE_VERIFICATION.md  GROQ_API_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  OPTIMIZATION_RECOMMENDATIONS.md  OPTIMIZATION_SUMMARY.md  ORGANIZATION_SUMMARY.md  PHASE2_COMPLETE.md  PIPELINE_OPTIMIZATION_REPORT.md  PROJECT_STRUCTURE.md  PROVIDERS_MODERNIZATION.md  QUICKSTART.md  QUICK_START_GUIDE.md  README.md  README_REORGANIZED.md  REBASE_SUMMARY.md  REFACTOR_PLAN.md  REFACTOR_README.md  REFACTOR_SUMMARY.md  SAVE_LOAD_EXPORT_COMPLETE.md  STATUS.md  TASK_1_1_4_SUMMARY.md  (+71 more)
.copilot/: config.toml
.github/: copilot-instructions.md
.github/chatmodes/: Beast.chatmode.md
app/: __init__.py  __main__.py  dependencies.py  utils.py
app/api/: __init__.py  async_chat.py  chat.py  documents.py  files.py  models.py  personas.py
app/models/: requests.py  responses.py
app/routers/: auth.py  chat.py  documents.py  files.py  models.py  tts.py
app/web/: __init__.py  views.py
backend/: documents.db-shm  documents.db-wal  main.py  main_original.py  performance_benchmark_1761849822.json
backend/app/: __init__.py
backend/blueprints/: auth.py
blueprints/: chat.py  file.py  tts.py
config/: gunicorn.conf.py  modern_settings.py  settings.py
core/: __init__.py  advanced_analytics.py  advanced_monitoring.py  api_gateway.py  api_services.py  app_async_wrappers.py  asset_integration.py  asset_loader.py  async_database.py  async_handler.py  async_integration_examples.py  background_tasks.py  cache.py  cache_integration.py  cache_warmer.py  cached_document_store.py  cdn_optimization.py  chat_handler.py  circuit_breaker.py  compression_middleware.py  context.py  database_maintenance.py  database_migration.py  database_optimizations.py  document_chunker.py  document_store.py  dynamic_model_fetcher.py  edge_computing.py  enhanced_api_services.py  enterprise_security.py  errors.py  file_processor.py  flask_assets.py  health_checker.py  hybrid_cache.py  kubernetes_orchestration.py  load_balancer.py  memory_profiler.py  microservices_framework.py  ml_optimization.py  (+25 more)
docs/: API.md  CORE_MODULES.md  DEPLOYMENT.md
exports/: provide_me_with_a_roadmap_for__20250225_160741.md
fastapi_env/: pyvenv.cfg
frontend/: README.md  index.html  script.js  styles.css
local/: refactor.md  requirements.txt
models/: user.py
monitoring/: alert_rules.yml  prometheus.yml
refactor_backup/: ai_models.py  app.py  app_integration.py  app_refactored.py  pyproject.toml  requirements.txt
refactor_reports/: coverage_report.txt  file_sizes_report.txt  flake8_report.json  hardcoded_secrets_report.txt  phase1_summary_report.md  pylint_report.json  safety_report.json  safety_report.txt  test_results.txt
scripts/: .env.template  MODEL_CONFIGURATION_FIXES.md  PROVIDER_SETUP_GUIDE.md  README_PROVIDER_VALIDATION.md  build_assets.py  cleanup_codebase.py  cleanup_project.py  dependency_checker.py  fix_imports.py  fix_xai_api_key.py  organize_and_declutter.py  parse_models.py  performance_benchmark.py  phase1_refactor.py  phase1_refactor_clean.py  phase2_architecture_patterns.py  phase3_performance_optimization.py  production_setup.py  provider_validation_20251031_003709.json  provider_validation_20251031_004453.json  run_all_tasks.py  test_edit_functionality.py  test_get_models.py  test_update_models.py  update_ai_models_py.py  update_models.py  update_models_from_providers.py  validate_providers.py
services/: __init__.py  cached_file_manager.py  enhanced_file_manager.py  file_manager.py  file_processor.py  xai_service.py
static/: optimizations.js  script.js  script_optimized.js  styles.css
storage/: document_index.json
summaries/: JAVASCRIPT_MODULARIZATION_COMPLETE.md  README.md  TASK_1.1.1_COMPLETION_REPORT.md  TASK_1.1.2_COMPLETED.md  TASK_1.2.1_COMPLETED.md  TASK_1.2.2_COMPLETED.md  TASK_1.2.3_COMPLETION_REPORT.md  TASK_1.3.1_COMPLETED.md  TASK_1.3.2_COMPLETED.md  TASK_1.3.3_COMPLETED.md  TASK_2.1.2_COMPLETION_SUMMARY.md  TASK_2_2_1_SUMMARY.md  TASK_2_2_2_SUMMARY.md  TASK_EXECUTION_SUMMARY.md
templates/: dashboard.html  index.html  index_broken.html  index_optimized.html  upload.html
test_scripts/: README.md  demo_request_queue.py  simple_asset_test.py  test_asset_integration.py  test_asset_optimization.py  test_async_handler.py  test_async_post_endpoints.py  test_cache_warmer.py  test_database_maintenance.py  test_document_chunker.py  test_enhanced_file_manager.py  test_modular_architecture.py  test_production_integration.py  test_query_cache_fixed.py  test_query_cache_integration.py  test_query_cache_simple.py  test_request_queue.py  test_simple_queue.py  test_streaming_processor.py  test_timeout_system.py  validate_async_endpoints.py
tests/: IMPLEMENTATION_SUMMARY.md  TESTING_VALIDATION_SUMMARY.md  comprehensive_test_runner.py  integration_testing.py  performance_testing.py  security_testing.py  test_asset_optimization_enhanced.py  test_config.py  test_document_store.py  test_service_worker_implementation.py
trash2move/: MIGRATION_COMPLETE.md  MIGRATION_SUCCESS_FINAL.md  advanced_ai_chat_test_20250814_154456.md  advanced_ai_chat_test_20250814_154456.txt  chat_export_20250814_140445.md  chat_export_20250814_141936.md  clean_export_test_20250814_141807.md  clean_export_test_20250814_141807.txt  clean_export_test_20250814_144821.md
trash2review/: README_heavy.md  REBASE_COMPLETE.md  api_config.py  app_heavy.py  app_original.py  caching.py  file_manager.py  index_original.html  manifest_original.json  requirements.txt  script_original.js  structure.md  styles_original.css  sw_original.js
utils/: api_config.py  caching.py  file_manager.py  file_processor.py  fix_html.py  js_error_checker.py  request_manager.py
(+108 files in other folders)
