[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project]
name = "tq-genai-chat"
version = "0.1.0"
description = "A multi-provider GenAI chat application with file processing capabilities"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = [
    # Core Flask Requirements
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "werkzeug>=2.3.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.1.0",
    "markupsafe>=2.1.0",
    
    # API Clients
    "openai>=1.64.0",
    "anthropic>=0.46.0",
    "mistralai>=1.5.0",
    
    # HTTP & Network
    "requests>=2.31.0",
    "httpx>=0.28.0",
    "urllib3>=2.0.0",
    
    # File Processing
    "python-docx>=0.8.11",
    "markdown>=3.7",
    "lxml>=4.9.0",
    "pillow>=10.0.0",
    "pypdf2>=3.0.0",  # For PDF processing
    "ebooklib>=0.18",  # For EPUB processing
    "openpyxl>=3.1.0",  # For Excel processing
    "pandas>=2.0.0",  # For CSV processing
    
    # Audio Processing
    "pydub>=0.25.0",
    "speechrecognition>=3.10.0",
    
    # Machine Learning & Data Science
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
    
    # Type Annotations & Validation
    "pydantic>=2.10.0",
    "typing-extensions>=4.8.0",
    
    # Async
    "anyio>=4.0.0",
    
    # Utilities
    "tqdm>=4.66.0",
    "click>=8.1.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["app", "persona", "config", "services", "utils"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=app --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
